05-DYNAMIC-DNS/test-b-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  namespace: test-web
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    #acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  rules:
  - host: api.nolifelover.example
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-deploy-main
            port:
              number: 80
  tls:
  - hosts:
    - api.nolifelover.example
    secretName: ingress-resource-http-tls
  ingressClassName: nginx
